[gd_scene load_steps=39 format=3 uid="uid://bkaimvifjwkai"]

[ext_resource type="Script" path="res://game_boards/board_space/game_space.gd" id="1_w6e46"]
[ext_resource type="Texture2D" uid="uid://cwhjcn0y744nv" path="res://assets/gems/background-space.png" id="3_f5frv"]
[ext_resource type="AudioStream" uid="uid://b8a4cffq3sk1s" path="res://assets/audio/winner_fanfare.mp3" id="4_4drev"]
[ext_resource type="PackedScene" uid="uid://d0yw6oyw3qib0" path="res://game_boards/board_food/assets/animated_cloud.tscn" id="4_731ya"]
[ext_resource type="AudioStream" uid="uid://ds53xomd2ha1b" path="res://assets/audio/Abstract2.ogg" id="4_cbs6r"]
[ext_resource type="Theme" uid="uid://c58sv51ac2qkl" path="res://themes/game_top_label_theme.tres" id="6_i6ds6"]
[ext_resource type="Texture2D" uid="uid://niaauagll4b7" path="res://assets/level-space/space_top_bar.png" id="6_tboc8"]
[ext_resource type="Shader" path="res://game_boards/board_space/assets/gem_cell.gdshader" id="6_tywfq"]
[ext_resource type="Texture2D" uid="uid://dt14wt38x2ddb" path="res://assets/gems/space/Space_R.png" id="7_8sijq"]
[ext_resource type="PackedScene" uid="uid://7bjuflj7lf44" path="res://game_boards/board_space/assets/space_progress_bar.tscn" id="7_irug6"]
[ext_resource type="Theme" uid="uid://1cdmnqyil8gy" path="res://themes/game_stats_label_theme.tres" id="8_nteo6"]
[ext_resource type="Texture2D" uid="uid://dwf6yosfhinvi" path="res://assets/gems/space/Space_Z.png" id="9_ygwn3"]
[ext_resource type="Texture2D" uid="uid://cavqcc5satl8d" path="res://assets/gems/space/Space_Y.png" id="10_yghiu"]
[ext_resource type="Texture2D" uid="uid://c37gqqvuu16v3" path="res://assets/gems/space/Space_G.png" id="11_1nee1"]
[ext_resource type="Texture2D" uid="uid://cvlodafggu8vg" path="res://assets/gems/space/Space_B.png" id="12_rwo65"]
[ext_resource type="Texture2D" uid="uid://cnx5i4dv14xma" path="res://assets/gems/space/Space_P.png" id="13_wc6j4"]
[ext_resource type="PackedScene" uid="uid://b02gonq6mjgh8" path="res://game_boards/board_space/board_space.tscn" id="14_xjwh6"]
[ext_resource type="FontFile" uid="uid://dlhwrp5jwkrll" path="res://assets/fonts/Acme-Regular.ttf" id="15_qcr5o"]
[ext_resource type="Texture2D" uid="uid://27rcw10bp2xt" path="res://assets/gui/ButtonText_Large_Green_Round.png" id="15_qjgsg"]
[ext_resource type="Texture2D" uid="uid://bebhmcgujnoxc" path="res://assets/gui/ButtonText_Large_GreyOutline_Round.png" id="16_20lur"]
[ext_resource type="FontFile" uid="uid://bylgyjavx5yts" path="res://assets/fonts/Quicksand-Regular.ttf" id="16_donlk"]
[ext_resource type="Texture2D" uid="uid://dcow071sb2a7i" path="res://assets/gui/ButtonText_Large_Orange_Round.png" id="17_oxovp"]
[ext_resource type="Theme" uid="uid://duftrpb020ewi" path="res://themes/game_msg_btm.tres" id="18_jrjnv"]
[ext_resource type="Texture2D" uid="uid://chrsqb6yhlqeq" path="res://assets/gui/ButtonText_Large_Blue_Round.png" id="18_y8cds"]
[ext_resource type="Theme" uid="uid://c68uhjmxln8ao" path="res://themes/game_msg_top.tres" id="19_iidij"]
[ext_resource type="Texture2D" uid="uid://c4hpyl2askghn" path="res://assets/gui/Box_Blue_Rounded.png" id="25_hdvp7"]
[ext_resource type="Texture2D" uid="uid://b2hff0i6ooa2b" path="res://assets/level-space/star-07.png" id="27_s5rey"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_103kv"]
bg_color = Color(0, 0, 0, 0.6)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k3sk6"]
bg_color = Color(0, 0, 0, 0.6)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2xg0a"]
shader = ExtResource("6_tywfq")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 5.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_v882r"]
shader = ExtResource("6_tywfq")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 5.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_u84gj"]
shader = ExtResource("6_tywfq")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 5.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_oi0wf"]
shader = ExtResource("6_tywfq")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 5.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_skchu"]
shader = ExtResource("6_tywfq")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 5.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_csjnx"]
shader = ExtResource("6_tywfq")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 5.0

[sub_resource type="Animation" id="Animation_3xeuw"]
resource_name = "show_msg_amazing"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ContMessages/Msg-Amazing:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ContMessages/Msg-Amazing/RTL-Btm-Amazing:theme_override_font_sizes/normal_font_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [204, 240, 204]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ContMessages/Msg-Amazing/RTL-Top-Amazing:theme_override_font_sizes/normal_font_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [204, 240, 204]
}

[sub_resource type="Animation" id="Animation_qap41"]
resource_name = "show_msg_game"
length = 0.5
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ContMessages/CenterContainer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, null]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ContMessages/CenterContainer/LabelMsgBtm:theme_override_font_sizes/normal_font_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [204, 240, 204]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ContMessages/CenterContainer/LabelMsgTop:theme_override_font_sizes/normal_font_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [204, 240, 204]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_htlur"]
_data = {
"show_msg_amazing": SubResource("Animation_3xeuw"),
"show_msg_game": SubResource("Animation_qap41")
}

[node name="GameSpace" type="Node2D"]
script = ExtResource("1_w6e46")

[node name="Background" type="TextureRect" parent="."]
offset_right = 2000.0
offset_bottom = 1390.0
texture = ExtResource("3_f5frv")
expand_mode = 2

[node name="DBGBkgdDimmer" type="Panel" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 2000.0
offset_bottom = 1390.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_103kv")

[node name="AudioGemMove" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_cbs6r")

[node name="AudioWinner" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_4drev")

[node name="ContTopClouds" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AnimatedCloud1" parent="ContTopClouds" instance=ExtResource("4_731ya")]

[node name="AnimatedCloud2" parent="ContTopClouds" instance=ExtResource("4_731ya")]
position = Vector2(1000, 75)

[node name="AnimatedCloud3" parent="ContTopClouds" instance=ExtResource("4_731ya")]
position = Vector2(-1000, 100)

[node name="ContTopBar" type="Control" parent="."]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="GameTopBkgd" type="Panel" parent="ContTopBar"]
visible = false
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_right = 2000.0
offset_bottom = 150.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_k3sk6")

[node name="GameTopHBox" type="HBoxContainer" parent="ContTopBar"]
visible = false
custom_minimum_size = Vector2(2000, 150)
layout_mode = 0
offset_right = 2000.0
offset_bottom = 150.0

[node name="HBoxContainer1" type="HBoxContainer" parent="ContTopBar/GameTopHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="ContTopBar/GameTopHBox/HBoxContainer1"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("6_i6ds6")
text = "Score "
horizontal_alignment = 2

[node name="Value" type="Label" parent="ContTopBar/GameTopHBox/HBoxContainer1"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("6_i6ds6")
text = "0"

[node name="HBoxContainer2" type="HBoxContainer" parent="ContTopBar/GameTopHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="ContTopBar/GameTopHBox/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("6_i6ds6")
text = "Moves "
horizontal_alignment = 2

[node name="Value" type="Label" parent="ContTopBar/GameTopHBox/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("6_i6ds6")
text = "0"

[node name="NewSciFiBanner" type="NinePatchRect" parent="ContTopBar"]
layout_mode = 0
offset_right = 2000.0
offset_bottom = 175.0
texture = ExtResource("6_tboc8")
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 34

[node name="SpaceProgressBar" parent="ContTopBar" instance=ExtResource("7_irug6")]
position = Vector2(30, 10)
scale = Vector2(2, 2)

[node name="ContGameStats" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameStatsBkgd" type="Panel" parent="ContGameStats"]
layout_mode = 0
offset_left = 75.0
offset_top = 250.0
offset_right = 425.0
offset_bottom = 1274.0
theme_override_styles/panel = SubResource("StyleBoxFlat_k3sk6")

[node name="GameStats" type="VBoxContainer" parent="ContGameStats"]
layout_mode = 0
offset_left = 120.0
offset_top = 280.0
offset_right = 370.0
offset_bottom = 1304.0
theme_override_constants/separation = 40

[node name="HBoxContainer1" type="HBoxContainer" parent="ContGameStats/GameStats"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Control" type="Control" parent="ContGameStats/GameStats/HBoxContainer1"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="ContGameStats/GameStats/HBoxContainer1/Control"]
material = SubResource("ShaderMaterial_2xg0a")
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_8sijq")
centered = false

[node name="Label" type="Label" parent="ContGameStats/GameStats/HBoxContainer1"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("8_nteo6")
theme_override_font_sizes/font_size = 96
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="ContGameStats/GameStats"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Control" type="Control" parent="ContGameStats/GameStats/HBoxContainer3"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="ContGameStats/GameStats/HBoxContainer3/Control"]
material = SubResource("ShaderMaterial_v882r")
scale = Vector2(0.5, 0.5)
texture = ExtResource("10_yghiu")
centered = false

[node name="Label" type="Label" parent="ContGameStats/GameStats/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("8_nteo6")
theme_override_colors/font_color = Color(0.945098, 0.945098, 0.945098, 1)
theme_override_font_sizes/font_size = 96
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="HBoxContainer4" type="HBoxContainer" parent="ContGameStats/GameStats"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Control" type="Control" parent="ContGameStats/GameStats/HBoxContainer4"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="ContGameStats/GameStats/HBoxContainer4/Control"]
material = SubResource("ShaderMaterial_u84gj")
scale = Vector2(0.5, 0.5)
texture = ExtResource("11_1nee1")
centered = false

[node name="Label" type="Label" parent="ContGameStats/GameStats/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("8_nteo6")
theme_override_colors/font_color = Color(0.945098, 0.945098, 0.945098, 1)
theme_override_font_sizes/font_size = 96
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="HBoxContainer5" type="HBoxContainer" parent="ContGameStats/GameStats"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Control" type="Control" parent="ContGameStats/GameStats/HBoxContainer5"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="ContGameStats/GameStats/HBoxContainer5/Control"]
material = SubResource("ShaderMaterial_oi0wf")
scale = Vector2(0.5, 0.5)
texture = ExtResource("12_rwo65")
centered = false

[node name="Label" type="Label" parent="ContGameStats/GameStats/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("8_nteo6")
theme_override_colors/font_color = Color(0.945098, 0.945098, 0.945098, 1)
theme_override_font_sizes/font_size = 96
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="HBoxContainer6" type="HBoxContainer" parent="ContGameStats/GameStats"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Control" type="Control" parent="ContGameStats/GameStats/HBoxContainer6"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="ContGameStats/GameStats/HBoxContainer6/Control"]
material = SubResource("ShaderMaterial_skchu")
scale = Vector2(0.5, 0.5)
texture = ExtResource("13_wc6j4")
centered = false

[node name="Label" type="Label" parent="ContGameStats/GameStats/HBoxContainer6"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("8_nteo6")
theme_override_colors/font_color = Color(0.945098, 0.945098, 0.945098, 1)
theme_override_font_sizes/font_size = 96
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="ContGameStats/GameStats"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="Control" type="Control" parent="ContGameStats/GameStats/HBoxContainer2"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="ContGameStats/GameStats/HBoxContainer2/Control"]
material = SubResource("ShaderMaterial_csjnx")
scale = Vector2(0.5, 0.5)
texture = ExtResource("9_ygwn3")
centered = false

[node name="Label" type="Label" parent="ContGameStats/GameStats/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("8_nteo6")
theme_override_font_sizes/font_size = 96
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="ContBoard" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 1

[node name="DBGBoardRectArea" type="Panel" parent="ContBoard"]
layout_mode = 0
offset_left = 500.0
offset_top = 250.0
offset_right = 1524.0
offset_bottom = 1274.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_103kv")

[node name="GemBoard" parent="ContBoard" instance=ExtResource("14_xjwh6")]
position = Vector2(500, 250)

[node name="ContDebugBtns" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 1655.0
offset_top = 575.0
offset_right = 1963.0
offset_bottom = 935.0

[node name="BtnDebug" type="TextureButton" parent="ContDebugBtns"]
layout_mode = 0
offset_left = 4.0
offset_top = 16.0
offset_right = 1163.0
offset_bottom = 374.0
scale = Vector2(0.25, 0.25)
texture_normal = ExtResource("16_20lur")

[node name="Label" type="Label" parent="ContDebugBtns/BtnDebug"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 120
text = "CLEAR/RESET"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BtnCheckerboard" type="TextureButton" parent="ContDebugBtns"]
layout_mode = 0
offset_left = 4.0
offset_top = 124.0
offset_right = 1163.0
offset_bottom = 482.0
scale = Vector2(0.25, 0.25)
texture_normal = ExtResource("17_oxovp")

[node name="Label" type="Label" parent="ContDebugBtns/BtnCheckerboard"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 120
text = "CHECKERED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BtnUnlock" type="TextureButton" parent="ContDebugBtns"]
layout_mode = 0
offset_left = 4.0
offset_top = 250.0
offset_right = 1163.0
offset_bottom = 608.0
scale = Vector2(0.25, 0.25)
texture_normal = ExtResource("15_qjgsg")

[node name="Label" type="Label" parent="ContDebugBtns/BtnUnlock"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 120
text = "UNLOCK"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContDebug" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 1680.0
offset_top = 920.0
offset_right = 1930.0
offset_bottom = 1270.0

[node name="ContDebugBkgd" type="Panel" parent="ContDebug"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_k3sk6")

[node name="VBoxContainer" type="VBoxContainer" parent="ContDebug"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="ContDebugLabel" type="Label" parent="ContDebug/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("15_qcr5o")
theme_override_font_sizes/font_size = 32
text = "ContDebugLabel"
vertical_alignment = 1
text_overrun_behavior = 1

[node name="ContDebugValue" type="Label" parent="ContDebug/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("16_donlk")
theme_override_font_sizes/font_size = 52
text = "Cont
Debug
Value"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BtnNewGame" type="TextureButton" parent="."]
offset_left = 1600.0
offset_top = 250.0
offset_right = 2759.0
offset_bottom = 608.0
scale = Vector2(0.3, 0.3)
texture_normal = ExtResource("15_qjgsg")

[node name="Label" type="Label" parent="BtnNewGame"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 120
text = "NEW GAME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BtnQuitGame" type="TextureButton" parent="."]
offset_left = 1656.0
offset_top = 415.0
offset_right = 2815.0
offset_bottom = 773.0
scale = Vector2(0.25, 0.25)
texture_normal = ExtResource("18_y8cds")

[node name="Label" type="Label" parent="BtnQuitGame"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 120
text = "Quit"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContMessages" type="Control" parent="."]
custom_minimum_size = Vector2(2000, 230)
layout_mode = 3
anchors_preset = 0
offset_top = 540.0
offset_right = 2000.0
offset_bottom = 770.0
mouse_filter = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="ContMessages"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_htlur")
}

[node name="Msg-Amazing" type="Control" parent="ContMessages"]
visible = false
custom_minimum_size = Vector2(2000, 230)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1000.0
offset_top = -115.0
offset_right = 1000.0
offset_bottom = 115.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="RTL-Btm-Amazing" type="RichTextLabel" parent="ContMessages/Msg-Amazing"]
clip_contents = false
custom_minimum_size = Vector2(2000, 259)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -115.0
offset_bottom = 144.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("18_jrjnv")
theme_override_font_sizes/normal_font_size = 204
bbcode_enabled = true
text = "[center]Amazing![/center]"
fit_content = true
scroll_active = false
autowrap_mode = 0
shortcut_keys_enabled = false

[node name="RTL-Top-Amazing" type="RichTextLabel" parent="ContMessages/Msg-Amazing"]
clip_contents = false
custom_minimum_size = Vector2(2000, 259)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -115.0
offset_bottom = 144.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("19_iidij")
theme_override_font_sizes/normal_font_size = 204
bbcode_enabled = true
text = "[center]Amazing![/center]"
fit_content = true
scroll_active = false
autowrap_mode = 0
shortcut_keys_enabled = false

[node name="CenterContainer" type="CenterContainer" parent="ContMessages"]
visible = false
layout_mode = 0
offset_right = 2000.0
offset_bottom = 259.0
mouse_filter = 2

[node name="LabelMsgBtm" type="RichTextLabel" parent="ContMessages/CenterContainer"]
clip_contents = false
layout_mode = 2
theme = ExtResource("18_jrjnv")
theme_override_font_sizes/normal_font_size = 204
bbcode_enabled = true
text = "Message"
fit_content = true
scroll_active = false
autowrap_mode = 0
shortcut_keys_enabled = false

[node name="LabelMsgTop" type="RichTextLabel" parent="ContMessages/CenterContainer"]
clip_contents = false
layout_mode = 2
theme = ExtResource("19_iidij")
theme_override_font_sizes/normal_font_size = 204
bbcode_enabled = true
text = "Message"
fit_content = true
scroll_active = false
autowrap_mode = 0
shortcut_keys_enabled = false

[node name="ContWinner" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 2000.0
offset_bottom = 1390.0
grow_horizontal = 2
grow_vertical = 2

[node name="BkgdDimmer" type="Panel" parent="ContWinner"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_103kv")

[node name="TextureRect" type="TextureRect" parent="ContWinner"]
layout_mode = 0
offset_left = 555.0
offset_top = 246.0
offset_right = 2079.0
offset_bottom = 1768.0
scale = Vector2(0.6, 0.6)
texture = ExtResource("25_hdvp7")

[node name="Label" type="Label" parent="ContWinner/TextureRect"]
layout_mode = 0
offset_left = 325.0
offset_top = 100.0
offset_right = 1109.0
offset_bottom = 405.0
theme_override_fonts/font = ExtResource("15_qcr5o")
theme_override_font_sizes/font_size = 256
text = "Winner!"

[node name="BtnNewGame" type="TextureButton" parent="ContWinner/TextureRect"]
layout_mode = 0
offset_left = 305.0
offset_top = 1006.67
offset_right = 1464.0
offset_bottom = 1364.67
scale = Vector2(0.8, 0.8)
texture_normal = ExtResource("15_qjgsg")

[node name="Label" type="Label" parent="ContWinner/TextureRect/BtnNewGame"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 120
text = "NEW GAME"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpriteStar0" type="Sprite2D" parent="ContWinner"]
position = Vector2(787, 684)
scale = Vector2(0.42, 0.42)
texture = ExtResource("27_s5rey")

[node name="SpriteStar1" type="Sprite2D" parent="ContWinner"]
position = Vector2(1025, 616)
scale = Vector2(0.42, 0.42)
texture = ExtResource("27_s5rey")

[node name="SpriteStar2" type="Sprite2D" parent="ContWinner"]
position = Vector2(1253, 688)
scale = Vector2(0.42, 0.42)
texture = ExtResource("27_s5rey")

[connection signal="pressed" from="ContDebugBtns/BtnDebug" to="." method="_on_btn_debug_pressed"]
[connection signal="pressed" from="ContDebugBtns/BtnCheckerboard" to="." method="_on_btn_checkerboard"]
[connection signal="pressed" from="ContDebugBtns/BtnUnlock" to="." method="_on_btn_unlock_pressed"]
[connection signal="pressed" from="BtnNewGame" to="." method="_on_btn_newgame_pressed"]
[connection signal="pressed" from="BtnQuitGame" to="." method="_on_btn_quit_game"]
[connection signal="pressed" from="ContWinner/TextureRect/BtnNewGame" to="." method="_on_btn_newgame_pressed"]
